fixed timeline gap

--- a/src/styles/blocks/bricks/_tabs.scss
+++ b/src/styles/blocks/bricks/_tabs.scss
@@ -67,6 +67,12 @@
         margin-left: 30px;
       }
     }
+    .icon {
+      margin-right: 5px;
+      font-size: 17px;
+      vertical-align: top;
+      display: inline-block;
+    }
   }
   &__container {
     padding-top: 22px;
